@@ -1,5 +1,11 @@
 2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/script/argv.c (round_up_exp): unsigned is 32-bit on all
+	supported platforms. Put a compile time assert for this rather than
+	generate a warning with 32-bit shift.
+
+2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/disk/scsi.c (grub_scsi_read): Fix binary and check and make
 	logical expression more readable.
 
